chore(touch-action): update touch-action
 * new information from bruno's course about how to apply touch-actio
 * in mind of current version of @react-three/fiber

--- a/react-apps/bruno-room/src/index.css
+++ b/react-apps/bruno-room/src/index.css
@@ -40,14 +40,14 @@ main {
   height: 100dvh;
 }
 
-canvas {
+.canvas {
   max-width: 100%;
   animation: fade-in 1s ease 0.3s forwards;
   cursor: grab;
   touch-action: none;
 }
 
-canvas:active {
+.canvas:active {
   cursor: grabbing;
 }
 
